# Parkind

./: .gitignore  Dockerfile  README.md  manage.py
Parkind/: asgi.py  settings.py  urls.py  wsgi.py
ParkindClient/: README.md  log.go  log_windows.go  main.go  parkindclient_test.go  server.go  server_test.go
ParkindStreamer/: README.md
ai/: __init__.py  ai.py  benchmark.py  net.py  thread.py  train.py
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_device_ip_address.py  0003_auto_20201014_1106.py
client/: Cargo.toml
client/src/: main.rs
parkind_streamer/: Cargo.toml
parkind_streamer/src/: main.rs
static/css/: sb-admin-2.css  sb-admin-2.min.css
static/js/: dashboard.js  rest-data-table.js  utils.js
static/js/rest/: crud.js  device.js
ui/: admin.py  models.py  urls.py  views.py
ui/migrations/: 0001_initial.py  0002_notification.py  0003_auto_20200923_1037.py
ui/templates/ui/: application_layout.html  dashboard.html  forgot_password.html  login.html  register.html
ui/templates/ui/cameras/: add_form.html  detection_areas.html  general_settings.html  list.html  livestream.html  requests.html  streaming_settings.html
ui/templates/ui/devices/: add_form.html  api_inspection.html  api_settings.html  device_requests.html  general_settings.html  list.html
ui/templates/ui/misc/: help.html  quick_start.html
ui/templates/ui/users/: bans_list.html  role_list.html  user_list.html
