[package]
name = "parkind_streamer"
description = "Efficient video streaming and light-preprocessing program for Parkind system integration"
version = "0.1.0"
authors = ["Kornel Domeradzki <korneldomeradzki1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.46"
clap = "3.0.0-beta.2"
